# py-cx-ids

./: .gitignore  CONTRIBUTING.md  Readme.md  cli.py  cli_dsp_utils.py  cli_multipart_utils.py  cli_settings.py  env-example  pyproject.toml  requirements.txt  requirements_dev.txt
docker/dsp-consumer/: Dockerfile
docs/: new_edc_asset_structure.md
edc-dev-env/: .gitignore  Readme.md  build.sh  docker-compose-api-wrapper.yaml  docker-compose-edc.yaml  docker-compose-helpers.yaml  docker-compose-infrastructure.yaml  docker-compose-upstream-edc.yaml  docker-compose.yaml  env-example  start_edc.sh  start_eds.sh  start_infrastructure.sh
edc-dev-env/daps-mock/: Dockerfile  daps.crt  daps.key  daps_storage.json  requirements.txt
edc-dev-env/edc-upstream/: Dockerfile  Readme.md  vault.properties
edc-dev-env/tests/: helper.py  test_assets.py
edc-dev-env/vault_secrets/: consumer-encryption.keys  consumer.crt  consumer.key  consumer.miw.secret  provider-encryption.keys  provider.crt  provider.key  third-encryption.keys  third.crt  third.key
pycxids/apiwrapper/: Readme.md  api_wrapper.py
pycxids/cli/: cli.py  cli_dsp_utils.py  cli_multipart_utils.py  cli_settings.py
pycxids/core/: daps.py  ids.py  jwt_decode.py  models.py  settings.py
pycxids/cx/: Readme.md  flows.md  mock_settings.py  mocks.py  services.py
pycxids/edc/: Readme.md  api.py  consumer_proxy.py  settings.py  test_agreement_reuse.py  test_asset_fetch_binary.py  test_assets.py  test_catalog.py  test_catalog_broken.py  test_multiple_offers.py  test_number_of_contracts.py  (+4 more)
system-tests/: Readme.md  test_assets.py
tests/: Readme.md  helper.py  test_assets.py
(+182 files in other folders)
